force-app/main/default/objects/Yacht__c/fields/Asking_currency__c.field-meta.xml
<CustomField>
    <fullName>Asking_currency__c</fullName>
    <formula>TEXT(Current_Sale_MP__r.Asking_currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asking currency</label>
    <type>Text</type>
</CustomField>