force-app/main/default/objects/Yacht__c/fields/Asking_price__c.field-meta.xml
<CustomField>
    <fullName>Asking_price__c</fullName>
    <formula>Current_Sale_MP__r.Askingprice__c</formula>
    <label>Asking price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>