force-app/main/default/objects/Yacht__c/fields/Asking_price_USD__c.field-meta.xml
<CustomField>
    <fullName>Asking_price_USD__c</fullName>
    <formula>CASE(Asking_currency__c,
&quot;USD&quot;, Asking_price__c,
&quot;GBP&quot;, Asking_price__c* $CustomMetadata.Currency_rate__mdt.GBP_USD.Conversion_rate__c ,
&quot;EUR&quot;, Asking_price__c* $CustomMetadata.Currency_rate__mdt.EUR_USD.Conversion_rate__c ,
&quot;AUD&quot;, Asking_price__c* $CustomMetadata.Currency_rate__mdt.AUD_USD.Conversion_rate__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asking price USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>