force-app/main/default/objects/Yacht__c/fields/Askingprice__c.field-meta.xml
<CustomField>
    <fullName>Askingprice__c</fullName>
    <description>Populated by the market position record</description>
    <label>Asking price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>