force-app/main/default/objects/Yacht__c/fields/Boat_pro_ID__c.field-meta.xml
<CustomField>
    <fullName>Boat_pro_ID__c</fullName>
    <label>Boat pro ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>