force-app/main/default/objects/Yacht__c/fields/Brokerage_House__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_House__c</fullName>
    <formula>Current_Sale_MP__r.Brokerage_House__c</formula>
    <label>Brokerage House</label>
    <type>Text</type>
</CustomField>