force-app/main/default/objects/Yacht__c/fields/Build_Time_months__c.field-meta.xml
<CustomField>
    <fullName>Build_Time_months__c</fullName>
    <label>Build Time (months)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>