force-app/main/default/objects/Yacht__c/fields/Build_year__c.field-meta.xml
<CustomField>
    <fullName>Build_year__c</fullName>
    <formula>text(YEAR( Built__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Build year</label>
    <type>Text</type>
</CustomField>