force-app/main/default/objects/Yacht__c/fields/Builder__c.field-meta.xml
<CustomField>
    <fullName>Builder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Yachts (Builder)</relationshipLabel>
    <relationshipName>Yachts1</relationshipName>
    <type>Lookup</type>
</CustomField>