force-app/main/default/objects/Yacht__c/fields/Built__c.field-meta.xml
<CustomField>
    <fullName>Built__c</fullName>
    <description>to ascertain the build year</description>
    <inlineHelpText>Input an exact date if known, else a rough date so we can derive the year</inlineHelpText>
    <label>Built</label>
    <type>Date</type>
</CustomField>