force-app/main/default/objects/Yacht__c/fields/Burgess_Brokerage_CA__c.field-meta.xml
<CustomField>
    <fullName>Burgess_Brokerage_CA__c</fullName>
    <label>Burgess Brokerage CA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>