force-app/main/default/objects/Yacht__c/fields/Burgess_CA_Fleet__c.field-meta.xml
<CustomField>
    <fullName>Burgess_CA_Fleet__c</fullName>
    <label>Burgess CA/Fleet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>