force-app/main/default/objects/Yacht__c/fields/Burgess_Charter_CA__c.field-meta.xml
<CustomField>
    <fullName>Burgess_Charter_CA__c</fullName>
    <label>Burgess Charter CA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>