force-app/main/default/objects/Yacht__c/fields/Burgess_for_sale_url__c.field-meta.xml
<CustomField>
    <fullName>Burgess_for_sale_url__c</fullName>
    <formula>&quot;https://www.burgessyachts.com/en/buy-a-yacht/yachts-for-sale/&quot;
+
 SUBSTITUTE( Name , &quot; &quot;, &quot;-&quot;)  
+
&quot;-&quot;
+
 Yacht_ref_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Burgess for sale url</label>
    <type>Text</type>
</CustomField>