force-app/main/default/objects/Yacht__c/fields/Burgess_NC_Project__c.field-meta.xml
<CustomField>
    <fullName>Burgess_NC_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Burgess NC Project</label>
    <type>Checkbox</type>
</CustomField>