force-app/main/default/objects/Yacht__c/fields/Cabins__c.field-meta.xml
<CustomField>
    <fullName>Cabins__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cabins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>