force-app/main/default/objects/Yacht__c/fields/crewemployer__c.field-meta.xml
<CustomField>
    <fullName>crewemployer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crew employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Yachts (Crew employer)</relationshipLabel>
    <relationshipName>Yachts2</relationshipName>
    <type>Lookup</type>
</CustomField>