force-app/main/default/objects/Yacht__c/fields/Current_Charter_MP__c.field-meta.xml
<CustomField>
    <fullName>Current_Charter_MP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Charter MP</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Market_Position__c.Market_position_type__c</field>
            <operation>equals</operation>
            <value>Charter</value>
        </filterItems>
        <filterItems>
            <field>Market_Position__c.Status_Reason__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Market_Position__c</referenceTo>
    <relationshipLabel>Yachts (Current Charter MP)</relationshipLabel>
    <relationshipName>Yachts1</relationshipName>
    <type>Lookup</type>
</CustomField>