force-app/main/default/objects/Yacht__c/fields/Data_Population_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Population_Score__c</fullName>
    <formula>IF
(ISBLANK(TEXT(  Type__c )) = TRUE, 0, 33.33)
+
IF
(ISNULL(  Built__c ) = TRUE, 0, 33.33)
+
IF
(ISBLANK(  Builder__c  ) = TRUE, 0, 20.33)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Population Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>