force-app/main/default/objects/Yacht__c/fields/Detail_Link__c.field-meta.xml
<CustomField>
    <fullName>Detail_Link__c</fullName>
    <label>Detail link</label>
    <type>Url</type>
</CustomField>