force-app/main/default/objects/Yacht__c/fields/Dynamics_ID__c.field-meta.xml
<CustomField>
    <fullName>Dynamics_ID__c</fullName>
    <externalId>true</externalId>
    <label>Dynamics ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>