force-app/main/default/objects/Yacht__c/fields/DynamicsID36__c.field-meta.xml
<CustomField>
    <fullName>DynamicsID36__c</fullName>
    <formula>IF(
    ISBLANK( Dynamics_ID__c ),
    &quot;&quot;,

    IF(
        CONTAINS(Dynamics_ID__c , &quot;~&quot;),
        RIGHT(
            Dynamics_ID__c ,
            LEN(Dynamics_ID__c ) - FIND(&quot;~&quot;, Dynamics_ID__c )
        ),

        /* No tilde, but value exists → take last 36 chars */
        RIGHT(Dynamics_ID__c , 36)
    )
)</formula>
    <label>DynamicsID36</label>
    <type>Text</type>
</CustomField>