force-app/main/default/objects/Yacht__c/fields/Exterior_Designer__c.field-meta.xml
<CustomField>
    <fullName>Exterior_Designer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exterior Designer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Yachts (Exterior Designer)</relationshipLabel>
    <relationshipName>YachtsExtDes</relationshipName>
    <type>Lookup</type>
</CustomField>