force-app/main/default/objects/Yacht__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <label>Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SF_Country</valueSetName>
    </valueSet>
</CustomField>