force-app/main/default/objects/Yacht__c/fields/Fleet_Name__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Name__c</fullName>
    <label>Fleet Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>