force-app/main/default/objects/Yacht__c/fields/For_Charter__c.field-meta.xml
<CustomField>
    <fullName>For_Charter__c</fullName>
    <formula>IF(
    AND(
        ISPICKVAL(Current_Charter_MP__r.Market_position_type__c, &quot;Charter&quot;),
        NOT(ISBLANK(Current_Charter_MP__r.Status__c))
    ),
    Current_Charter_MP__r.Status__c,
    &quot;No&quot;
)</formula>
    <label>For Charter</label>
    <type>Text</type>
</CustomField>