force-app/main/default/objects/Yacht__c/fields/For_Sale__c.field-meta.xml
<CustomField>
    <fullName>For_Sale__c</fullName>
    <formula>IF(
    AND(
        ISPICKVAL(Current_Sale_MP__r.Market_position_type__c, &quot;Sale&quot;),
        NOT(ISBLANK(Current_Sale_MP__r.Status__c))
    ),
    Current_Sale_MP__r.Status__c,
    &quot;No&quot;
)</formula>
    <label>For Sale</label>
    <type>Text</type>
</CustomField>