force-app/main/default/objects/Yacht__c/fields/GT__c.field-meta.xml
<CustomField>
    <fullName>GT__c</fullName>
    <description>gross tonnage</description>
    <inlineHelpText>Gross tonnage</inlineHelpText>
    <label>GT</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>