force-app/main/default/objects/Yacht__c/fields/Guests__c.field-meta.xml
<CustomField>
    <fullName>Guests__c</fullName>
    <label>Guests</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>