force-app/main/default/objects/Yacht__c/fields/Hull_form__c.field-meta.xml
<CustomField>
    <fullName>Hull_form__c</fullName>
    <label>Hull form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planing hull</fullName>
            </value>
            <value>
                <fullName>Fast displacement</fullName>
            </value>
            <value>
                <fullName>Semi displacement</fullName>
            </value>
            <value>
                <fullName>Semi planing</fullName>
            </value>
            <value>
                <fullName>Multi hull</fullName>
            </value>
            <value>
                <fullName>Displacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>