force-app/main/default/objects/Yacht__c/fields/IMO__c.field-meta.xml
<CustomField>
    <fullName>IMO__c</fullName>
    <label>IMO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>