force-app/main/default/objects/Yacht__c/fields/Insured_by_BYFS__c.field-meta.xml
<CustomField>
    <fullName>Insured_by_BYFS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insured by BYFS</label>
    <type>Checkbox</type>
</CustomField>