force-app/main/default/objects/Yacht__c/fields/Interior_Designer__c.field-meta.xml
<CustomField>
    <fullName>Interior_Designer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interior Designer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Yachts (Interior Designer)</relationshipLabel>
    <relationshipName>YachtsIntDes</relationshipName>
    <type>Lookup</type>
</CustomField>