force-app/main/default/objects/Yacht__c/fields/LOA_Feet__c.field-meta.xml
<CustomField>
    <fullName>LOA_Feet__c</fullName>
    <formula>LOA_Metres__c * 3.281</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOA feet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>