force-app/main/default/objects/Yacht__c/fields/LOA_Metres__c.field-meta.xml
<CustomField>
    <fullName>LOA_Metres__c</fullName>
    <defaultValue>0</defaultValue>
    <label>LOA Metres</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>