force-app/main/default/objects/Yacht__c/fields/Lying_Country__c.field-meta.xml
<CustomField>
    <fullName>Lying_Country__c</fullName>
    <label>Lying Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SF_Country</valueSetName>
    </valueSet>
</CustomField>