force-app/main/default/objects/Yacht__c/fields/Lying_Date__c.field-meta.xml
<CustomField>
    <fullName>Lying_Date__c</fullName>
    <label>Lying Date</label>
    <type>Date</type>
</CustomField>