force-app/main/default/objects/Yacht__c/fields/Lying_Location__c.field-meta.xml
<CustomField>
    <fullName>Lying_Location__c</fullName>
    <label>Lying Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>