force-app/main/default/objects/Yacht__c/fields/Lying_region__c.field-meta.xml
<CustomField>
    <fullName>Lying_region__c</fullName>
    <label>Lying region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Atlantic Ocean</fullName>
            </value>
            <value>
                <fullName>Australasia</fullName>
            </value>
            <value>
                <fullName>Baltic Sea</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Caribbean</fullName>
            </value>
            <value>
                <fullName>Cruising</fullName>
            </value>
            <value>
                <fullName>East Mediterranean</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Indian Ocean</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Pacific Ocean</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
            <value>
                <fullName>Under construction</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>West Mediterranean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>