force-app/main/default/objects/Yacht__c/fields/MMSI__c.field-meta.xml
<CustomField>
    <fullName>MMSI__c</fullName>
    <label>MMSI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>