force-app/main/default/objects/Yacht__c/fields/Model_Type__c.field-meta.xml
<CustomField>
    <fullName>Model_Type__c</fullName>
    <label>Model Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>