force-app/main/default/objects/Yacht__c/fields/Motor_Sail__c.field-meta.xml
<CustomField>
    <fullName>Motor_Sail__c</fullName>
    <label>Motor/Sail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Motor</fullName>
            </value>
            <value>
                <fullName>Sail</fullName>
            </value>
            <value>
                <fullName>Motorsailer</fullName>
            </value>
            <value>
                <fullName>Berth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>