force-app/main/default/objects/Yacht__c/fields/Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Name_Formula__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id ,  Name , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Formula</label>
    <type>Text</type>
</CustomField>