force-app/main/default/objects/Yacht__c/fields/Naval_Architect__c.field-meta.xml
<CustomField>
    <fullName>Naval_Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Naval Architect</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Yachts (Naval Architect)</relationshipLabel>
    <relationshipName>YachtsNavalA</relationshipName>
    <type>Lookup</type>
</CustomField>