force-app/main/default/objects/Yacht__c/fields/Official_Number__c.field-meta.xml
<CustomField>
    <fullName>Official_Number__c</fullName>
    <label>Official Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>