force-app/main/default/objects/Yacht__c/fields/Port_of_Registry__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Registry__c</fullName>
    <label>Port of Registry</label>
    <length>50</length>
    <type>Text</type>
</CustomField>