force-app/main/default/objects/Yacht__c/fields/Prefered_Currency__c.field-meta.xml
<CustomField>
    <fullName>Prefered_Currency__c</fullName>
    <description>Used by Yacht Management to denote the Yacht&apos;s preferred currency for procurement items</description>
    <inlineHelpText>The Yacht&apos;s preferred currency for procurement items</inlineHelpText>
    <label>Prefered Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>