force-app/main/default/objects/Yacht__c/fields/Previous_yacht_names__c.field-meta.xml
<CustomField>
    <fullName>Previous_yacht_names__c</fullName>
    <label>Previous name(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>