force-app/main/default/objects/Yacht__c/fields/Product_type__c.field-meta.xml
<CustomField>
    <fullName>Product_type__c</fullName>
    <label>Product type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yacht</fullName>
                <default>true</default>
                <label>Yacht</label>
            </value>
            <value>
                <fullName>Berth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>