force-app/main/default/objects/Yacht__c/fields/Propulsion__c.field-meta.xml
<CustomField>
    <fullName>Propulsion__c</fullName>
    <label>Propulsion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Double Azipod drive</fullName>
            </value>
            <value>
                <fullName>Twin screw diesel yacht</fullName>
            </value>
            <value>
                <fullName>Triple Azipod drive</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Triple screw diesel yacht</fullName>
            </value>
            <value>
                <fullName>Twin Volvo Penta Pod Drives</fullName>
            </value>
            <value>
                <fullName>Triple waterjet diesel yacht</fullName>
            </value>
            <value>
                <fullName>Triple screw steam engines</fullName>
            </value>
            <value>
                <fullName>Twin waterjets diesel yacht</fullName>
            </value>
            <value>
                <fullName>Twin screw, single waterjet</fullName>
            </value>
            <value>
                <fullName>Single screw diesel yacht</fullName>
            </value>
            <value>
                <fullName>Quadruple Azipod drive</fullName>
            </value>
            <value>
                <fullName>Quadruple screw diesel yacht</fullName>
            </value>
            <value>
                <fullName>Quadruple waterjet diesel yacht</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>