force-app/main/default/objects/Yacht__c/fields/Selling_Broker__c.field-meta.xml
<CustomField>
    <fullName>Selling_Broker__c</fullName>
    <formula>Current_Sale_MP__r.Selling_Broker__c</formula>
    <label>Selling Broker</label>
    <type>Text</type>
</CustomField>