force-app/main/default/objects/Yacht__c/fields/Shipyard__c.field-meta.xml
<CustomField>
    <fullName>Shipyard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipyard</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Yachts (Shipyard)</relationshipLabel>
    <relationshipName>Shipyard</relationshipName>
    <type>Lookup</type>
</CustomField>