force-app/main/default/objects/Yacht__c/fields/Status_reason__c.field-meta.xml
<CustomField>
    <fullName>Status_reason__c</fullName>
    <label>Status reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Conversion Project</fullName>
            </value>
            <value>
                <fullName>Shipyard Design Project</fullName>
            </value>
            <value>
                <fullName>Design Project</fullName>
            </value>
            <value>
                <fullName>Under Construction</fullName>
            </value>
            <value>
                <fullName>Construction on hold</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>