force-app/main/default/objects/Yacht__c/fields/Total_guest_cabins__c.field-meta.xml
<CustomField>
    <fullName>Total_guest_cabins__c</fullName>
    <label>Total guest cabins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>