force-app/main/default/objects/Yacht__c/fields/Vessel_Type__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Type__c</fullName>
    <label>Vessel Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chase boat</fullName>
            </value>
            <value>
                <fullName>Auxiliary schooner</fullName>
            </value>
            <value>
                <fullName>Tender</fullName>
            </value>
            <value>
                <fullName>Pilot/survey vessel</fullName>
            </value>
            <value>
                <fullName>Explorer</fullName>
            </value>
            <value>
                <fullName>Auxiliary catamaran</fullName>
            </value>
            <value>
                <fullName>Raised pilothouse</fullName>
            </value>
            <value>
                <fullName>Tri-deck</fullName>
            </value>
            <value>
                <fullName>Auxiliary four masted schooner</fullName>
            </value>
            <value>
                <fullName>Auxiliary sailing yacht</fullName>
            </value>
            <value>
                <fullName>Pilothouse</fullName>
            </value>
            <value>
                <fullName>Trimaran</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Crossover</fullName>
            </value>
            <value>
                <fullName>Converted support vessel</fullName>
            </value>
            <value>
                <fullName>Motor yacht</fullName>
            </value>
            <value>
                <fullName>Superbarge</fullName>
            </value>
            <value>
                <fullName>Auxiliary sloop</fullName>
            </value>
            <value>
                <fullName>Auxiliary ketch</fullName>
            </value>
            <value>
                <fullName>Flybridge</fullName>
            </value>
            <value>
                <fullName>Sport fisher</fullName>
            </value>
            <value>
                <fullName>Auxiliary Bermudan ketch</fullName>
            </value>
            <value>
                <fullName>Motorsailer</fullName>
            </value>
            <value>
                <fullName>Three masted aerorig schooner</fullName>
            </value>
            <value>
                <fullName>Auxiliary three masted schooner</fullName>
            </value>
            <value>
                <fullName>Commercial vessel</fullName>
            </value>
            <value>
                <fullName>Support Vessel</fullName>
            </value>
            <value>
                <fullName>Cruise ship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>