force-app/main/default/objects/Yacht__c/fields/Where_Built__c.field-meta.xml
<CustomField>
    <fullName>Where_Built__c</fullName>
    <label>Where Built</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SF_Country</valueSetName>
    </valueSet>
</CustomField>