force-app/main/default/objects/Yacht__c/fields/Yacht_length__c.field-meta.xml
<CustomField>
    <fullName>Yacht_length__c</fullName>
    <formula>IF(
ISBLANK(LOA_Metres__c) = FALSE,
text(LOA_Metres__c)+&quot;m (&quot;+ TEXT(LOA_Feet__c)+&quot;ft)&quot;,
&quot;&quot;
)</formula>
    <label>Yacht length</label>
    <type>Text</type>
</CustomField>