force-app/main/default/objects/Yacht__c/fields/Yacht_Owner_UBO__c.field-meta.xml
<CustomField>
    <fullName>Yacht_Owner_UBO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to contact</description>
    <inlineHelpText>who is the owner of the boat (Person)</inlineHelpText>
    <label>Current Yacht UBO</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Yachts</relationshipLabel>
    <relationshipName>Yachts</relationshipName>
    <type>Lookup</type>
</CustomField>