force-app/main/default/objects/Yacht__c/fields/Yacht_Owning_Company__c.field-meta.xml
<CustomField>
    <fullName>Yacht_Owning_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>owner look up to account</description>
    <label>Yacht owning company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Yachts</relationshipLabel>
    <relationshipName>Yachts</relationshipName>
    <type>Lookup</type>
</CustomField>