force-app/main/default/objects/Yacht__c/fields/Yacht_ref_number__c.field-meta.xml
<CustomField>
    <fullName>Yacht_ref_number__c</fullName>
    <externalId>true</externalId>
    <label>Yacht ref. number</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>