force-app/main/default/objects/Yacht__c/fields/Yacht_UBO__c.field-meta.xml
<CustomField>
    <fullName>Yacht_UBO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Yacht UBO</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Yachts (Yacht UBO)</relationshipLabel>
    <relationshipName>Yachts1</relationshipName>
    <type>Lookup</type>
</CustomField>