force-app/main/default/objects/Yacht__c/fields/Yachtfolio_ID__c.field-meta.xml
<CustomField>
    <fullName>Yachtfolio_ID__c</fullName>
    <label>Yachtfolio ID</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>