force-app/main/default/objects/Yacht__c/fields/zzzStatus_Reason__c.field-meta.xml
<CustomField>
    <fullName>zzzStatus_Reason__c</fullName>
    <formula>IF(
ISBLANK(Current_Charter_MP__c) = TRUE,
TEXT(Current_Sale_MP__r.Status_Reason__c) ,
TEXT(Current_Charter_MP__r.Status_Reason__c)
)</formula>
    <label>zzzStatus Reason</label>
    <type>Text</type>
</CustomField>