force-app/main/default/objects/Yacht__c/listViews/All_Yachts.listView-meta.xml
<ListView>
    <fullName>All_Yachts</fullName>
    <columns>NAME</columns>
    <columns>Dynamics_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Yachts</label>
</ListView>